Usar HTTPS se disponível

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "testehospedagem.js",
   "scripts": {
     "start": "node testehospedagem",
+    "nodemon": "nodemon testehospedagem.js --watch testehospedagem.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thiago Fonseca",
